change to typescript

--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "build" : "rm -rf dist && npx tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-server": "node app.js"
+    "start-server": "npm run build && node dist/app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "typescript": "^5.1.6"
   }
 }
