--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "build" : "rm -rf dist && npx tsc",
+    "build": "rm -rf dist && npx tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-server": "npm run build && node dist/app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.17",
     "express": "^4.18.2",
+    "pg": "^8.11.2",
     "typescript": "^5.1.6"
   }
 }
