--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@types/express": "^4.17.17",
     "express": "^4.18.2",
     "pg": "^8.11.2",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.17",
+    "typeorm-naming-strategies": "^4.1.0",
     "typescript": "^5.1.6"
   }
 }
