--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "scripts": {
     "build": "rm -rf dist && npx tsc",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-server": "npm run build && node dist/app.js"
+    "start-server": "npm run build && node dist/app.js",
+    "develop":"nodemon ./src/app.ts",
+    "migration:generate" : "npm run build && typeorm migration:generate -d dist/db/postgres.db.js",
+    "migration:run": "npm run build && npx typeorm migration:run -d dist/db/postgres.db.js",
+    "migration:revert": "npm run build && npx typeorm migration:run -d dist/db/postgres.db.js"
+
   },
   "author": "",
   "license": "ISC",
@@ -18,5 +23,9 @@
     "typeorm": "^0.3.17",
     "typeorm-naming-strategies": "^4.1.0",
     "typescript": "^5.1.6"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1"
   }
 }
