--- a/package.json
+++ b/package.json
@@ -25,11 +25,23 @@
     "pg": "^8.11.2",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.17",
-    "typeorm-naming-strategies": "^4.1.0",
-    "typescript": "^5.1.6"
+    "typeorm-naming-strategies": "^4.1.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.3",
+    "jest": "^29.6.2",
     "nodemon": "^3.0.1",
-    "ts-node": "^10.9.1"
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.(t)s$": "ts-jest"
+    },
+    "collectCoverageFrom": [
+      "<rootDir>/src/**/*.ts",
+      "!**/index.ts"
+    ]
   }
 }
