--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "build": "rm -rf dist && npx tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start-server": "npm run build && node dist/app.js",
     "develop": "nodemon ./src/app.ts",
     "migration:generate": "npm run build && npx typeorm migration:generate -d dist/db/postgres.db.js",
@@ -16,11 +16,13 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.17",
+    "@types/jest-when": "^3.5.2",
     "@types/jsonwebtoken": "^9.0.2",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "express": "^4.18.2",
+    "jest-when": "^3.5.2",
     "jsonwebtoken": "^9.0.1",
     "pg": "^8.11.2",
     "reflect-metadata": "^0.1.13",
