--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
       "outDir": "dist",
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
-  }
+  },
+  "exclude":["**/*.test.ts"]
   
 }
