--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "build": "rm -rf dist && npx tsc",
-    "test": "jest",
+    "build": "rm -rf dist && npx tsc && cp .env ./dist/.env",
+    "test": "jest --verbose",
+    "test-coverage": "jest --coverage",
     "start-server": "npm run build && node dist/app.js",
     "develop": "nodemon ./src/app.ts",
     "migration:generate": "npm run build && npx typeorm migration:generate -d dist/db/postgres.db.js",
@@ -21,6 +22,7 @@
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jest-when": "^3.5.2",
     "jsonwebtoken": "^9.0.1",
